@@ -1,5 +1,8 @@
 Version 1.0.4
 ---------------------------------------------------------
+19 February 2007
++ Reduced translate functions
+
 15 February 2007
 + Updated locale files.
 + Added translate functions.
